@@ -270,6 +270,7 @@ x2goclient (4.0.4.0-0x2go1) UNRELEASED; urgency=low
     - help.{cpp,h}: also pass the help message on (for display in graphical
       mode.)
     - x2goclient.pro{,.maemo}: add new help.{cpp,h} files.
+    - onmainwindow.cpp: replace old help system with new one.
 
   [ Fernando Pedemonte ]
   * New upstream release (4.0.4.0):
